--- a/packages/react-filerobot-image-editor/package.json
+++ b/packages/react-filerobot-image-editor/package.json
@@ -36,9 +36,12 @@
     "react-konva": "18.1.1"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": ">=5.3.5"
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "build:lib": "rimraf lib && cross-env BABEL_ENV=production NODE_ENV=production babel src -d lib --config-file ../../babel.config.json -D"
