--- a/packages/react-filerobot-image-editor/package.json
+++ b/packages/react-filerobot-image-editor/package.json
@@ -30,7 +30,6 @@
   "dependencies": {
     "@babel/runtime": "^7.17.2",
     "@scaleflex/icons": "1.0.0-beta.80",
-    "@scaleflex/ui": "1.0.0-beta.80",
     "konva": "8.3.2",
     "prop-types": "15.7.2",
     "react-konva": "18.1.1"
@@ -38,8 +37,9 @@
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.3",
+    "@mui/material": "^5.11.4",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
   },
