--- a/packages/react-filerobot-image-editor/package.json
+++ b/packages/react-filerobot-image-editor/package.json
@@ -29,9 +29,13 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.4",
     "@scaleflex/icons": "1.0.0-beta.80",
     "konva": "8.3.2",
     "prop-types": "15.7.2",
+    "react-color": "^2.19.3",
     "react-konva": "18.1.1"
   },
   "peerDependencies": {
