--- a/packages/react-filerobot-image-editor/package.json
+++ b/packages/react-filerobot-image-editor/package.json
@@ -28,23 +28,19 @@
     "lib"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
+    "@babel/runtime": "^7.17.2"
+  },
+  "peerDependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.4",
     "@scaleflex/icons": "1.0.0-beta.80",
     "konva": "8.3.2",
     "prop-types": "15.7.2",
-    "react-color": "^2.19.3",
-    "react-konva": "18.1.1"
-  },
-  "peerDependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.4",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-konva": "18.1.1",
     "styled-components": "^5.3.6"
   },
   "scripts": {
